2012-03-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9: sorts & maps, MD5, chmod
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

	* Add degenerate variables to in.nc for testing nco_var_avg()

2012-02-29  Charlie Zender  <zender@uci.edu>

	* Use chmod() C-library call instead of chmod shell-command

	* Fix stat() and chmod() logic in ncrename

	* Increase ncrename diagnostics consistency and verbosity

2012-02-28  Charlie Zender  <zender@uci.edu>

	* Implement chmod so ncrename succeeds when output file is specified and input file is read-only

2012-02-23  Charlie Zender  <zender@uci.edu>

	* Update documentation to include/use new sort/map routines

2012-02-21  Henry Butowsky  <henryb@hush.com>

	* Modified/added following sort functions:
	sort(), asort() -sort ascending with/without map
	dsort() sort descending with/without map
	remap() apply sort map to variable
	unmap() return variable that produced current variable using sort map
	invert_map() invert the mapping

2012-02-20  Charlie Zender  <zender@uci.edu>

	* Implement MD5_DIGEST in nco_msa_prn_var_val() so MD5 now active
	in all forms of ncks.

	* Clean-up nco_md5.[ch], mark TODO nco1027 and nco485 as done

	* MD5 optionally enabled (with --md5) for input on ncks, ncrcat, ncecat
	When so enabled, MD5 comparisons to output are automatic with ncrcat, ncecat

2012-02-19  Charlie Zender  <zender@uci.edu>

	* MD5 is now done for input side. Need to add read loop to check output.

	* Finish implementatation for MSA writes and verify hyperslabs are
	correctly digested by showing that the digest of the hyperslab
	from "abc" to "a" yields the same as the digest of "a" directly.

	* Verify NCO MD5 implementation works for LPD's test cases

	* Implement MD5 algorithm on all ncrcat record writes, and on ncks non-hyperslab writes

	* Add MD5 test variables to in.nc
