@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.458 2012-03-01 18:07:46 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.459 2012-03-01 18:23:40 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.1.0 are ready. 
 
@@ -47,6 +47,8 @@ A. ncrename/ncatted succeed when output file is specified and input
    file is read-only. Formerly this failed:    
    chmod 444 ~/foo.nc;ncrename -O -v one,uno ~/foo.nc ~/foo2.nc
    Now NCO executes chmod() so it succeeds. Thanks to Paida for reporting this.
+
+A. Fix bug where ncap2 could fail when averaging degenerate arrays
 
 KNOWN BUGS NOT YET FIXED:
 
